--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -116,7 +116,7 @@
                 </div>
 
               </form>
-              <pre>state={{state|json}}</pre>
+              <!-- <pre>state={{state|json}}</pre> -->
 
             </div>
           </div>
